Improve tile styling

--- a/src/components/NewTodo.css
+++ b/src/components/NewTodo.css
@@ -1,10 +1,29 @@
 
 .NewTodo
 {
+  display: flex;
   color: aqua;
   border-radius: 1vw;
   border-style: solid;
   border-width: 1px;
-  width: 50vw;
+  width: 60vw;
+  margin: 1vw;
+  padding: 1vw;
 }
 
+.text-container
+{
+  flex: 10;
+}
+
+.button-container
+{
+  flex: 1;
+  text-align: right;
+  margin: auto;
+}
+
+.button-container a
+{
+  cursor: pointer;
+}
