--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 
 .App
 {
-  text-align: center;
-  background-color: #282c34;
+  text-align: left;
+  background-color: rgb(60, 70, 80);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: white;
 }
 
