--- a/src/components/TodoTile.css
+++ b/src/components/TodoTile.css
@@ -8,19 +8,19 @@
   padding: 1vw;
 }
 
-.text-container
+.tile-text-container
 {
   flex: 10;
 }
 
-.button-container
+.tile-button-container
 {
   flex: 1;
   text-align: right;
   margin: auto;
 }
 
-.button-container a
+.tile-button-container a
 {
   cursor: pointer;
 }
